--- a/platformio.ini
+++ b/platformio.ini
@@ -1,11 +1,7 @@
-[env:esp12e]
-platform = espressif8266
-board = esp12e
+[env:esp32dev]
+platform = espressif32
+board = esp32dev
 framework = arduino
 lib_deps = 
-    ESP8266WebServer
     bblanchon/ArduinoJson@^7.4.1
 extra_scripts = pre:convert_html.py
-build_flags = 
-    -DPIO_FRAMEWORK_ARDUINO_LWIP2_HIGHER_BANDWIDTH
-    -DMMU_IRAM_SIZE=32768
